--- a/aquariusswaptest16.7/index.html
+++ b/aquariusswaptest16.7/index.html
@@ -68,6 +68,12 @@
     .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:22px}
     h1{margin:0 0 10px;font-size:20px;letter-spacing:.3px}
     h2{margin:18px 0 8px}
+    h3{
+  margin:16px 0 8px;
+  font-size:16px;
+  font-weight:700;
+  letter-spacing:.02em;
+}
     p{margin:.25rem 0 .75rem;opacity:.96}
     .row{display:flex;gap:6px;align-items:center;flex-wrap:wrap}
     .small{font-size:12px;opacity:.8}
